# nih2

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
.github/workflows/: ci.yml
demo/: Cargo.toml  build.rs
demo/res/: Lamp2.mtl  Teapot.mtl  Teapot2.mtl  Teapot3.mtl
demo/src/: io.rs  main.rs
examples/grass/: Cargo.toml  README.md
examples/grass/src/: main.rs
examples/normal_mapping/: Cargo.toml  README.md
examples/normal_mapping/src/: main.rs
examples/particles/: Cargo.toml  README.md
examples/particles/src/: main.rs
examples/skybox/: Cargo.toml  build.rs
examples/skybox/src/: hosek_wilkie_sky.rs  main.rs  reinhard_tone_mapper.rs
examples/texture_filtering/: Cargo.toml
examples/texture_filtering/src/: main.rs
nih/: Cargo.toml
nih/benches/: rasterizer.rs  sampler.rs
nih/src/: lib.rs
nih/src/math/: aabb.rs  dot.rs  geom.rs  mat22.rs  mat33.rs  mat34.rs  mat44.rs  mod.rs  quat.rs  simd.rs  vec2.rs  vec3.rs  vec4.rs
nih/src/render/: buffer.rs  clipper.rs  draw_lines.rs  framebuffer.rs  mesh.rs  mod.rs  rasterizer.rs  rgba.rs  sampler.rs  texture.rs  tiled_buffer.rs  vertex.rs  viewport.rs
nih/src/util/: profiler.rs
nih/tests/: rasterizer_tests.rs
