[package]
name = "nih"
version = "0.1.0"
edition = "2024"

[dependencies]
arrayvec = "0.7.6"
bytemuck = { version = "1.23.1", features = ["derive"] }
rayon = "1.8"
image = "0.25.6"

[dev-dependencies]
rstest = "0.18"
criterion = "0.7"

[[bench]]
name = "sampler"
harness = false

[[bench]]
name = "rasterizer"
harness = false